--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "aws-sdk": "^2.745.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.1",
+    "serverless": "^1.81.1",
+    "serverless-pseudo-parameters": "^2.5.0"
   },
   "dependencies": {
-    "cookie": "^0.4.1",
     "superagent": "^6.1.0"
   }
 }
