--- a/adapters/youtube-music/serverless.yml
+++ b/adapters/youtube-music/serverless.yml
@@ -25,60 +25,10 @@ plugins:
 functions:
   adapter-youtube-music:
     handler: adapters/youtube-music/index.handler
+    memorySize: 512
+    timeout: 300
     events:
       - sns:
           arn: 
             Fn::ImportValue: ${self:custom.stage}-NewEpisodesARN
           topicName: NewRozhlasEpisodes
-
-resources:
-  Resources:
-    PlaylistTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        BillingMode: PAY_PER_REQUEST
-
-    AdapterRole:
-      Type: AWS::IAM::Role
-      Properties:
-        Path: /rozhlas-archive/adapters/youtube-music/
-        RoleName: AdapterRole
-        AssumeRolePolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - lambda.amazonaws.com
-              Action: sts:AssumeRole
-        Policies:
-          - PolicyName: DynamoLambdaRole
-            PolicyDocument:
-              Version: '2012-10-17'
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - logs:CreateLogGroup
-                    - logs:CreateLogStream
-                    - logs:PutLogEvents
-                  Resource: 
-                    - arn:aws:logs:#{AWS::Region}:#{AWS::AccountId}:log-group:/aws/lambda/*:*:*
-                - Effect: Allow
-                  Action:
-                    - dynamodb:Query
-                    - dynamodb:Scan
-                    - dynamodb:GetItem
-                    - dynamodb:PutItem
-                    - dynamodb:UpdateItem
-                    - dynamodb:DeleteItem
-                    - dynamodb:BatchGetItem
-                    - dynamodb:BatchWriteItem
-                    - dynamodb:DescribeTable
-                  Resource: 
-                    - Fn::GetAtt: PlaylistTable.Arn
